test mybinder build with docs in docs/

--- a/covid/covid19mx_notebook.ipynb
+++ b/covid/covid19mx_notebook.ipynb
@@ -4,19 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploración de datos de COVID19"
+    "# Exploración de datos de COVID19\n",
+    "## Actualizado el: 02/04/2020"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import covid.ultima_actualizacion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Versión: 02/04/2020\n"
+      "Versión: 03/04/2020\n"
      ]
     }
    ],
@@ -29,6 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "#### Este archivo te permitirá explorar los datos del contagio de COVID19 [https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide]\n",
     "\n",
     "* Este recurso está inspirado en el artículo de Matt Makai, \"Learning pandas by Exploring COVID-19 Data\", escrito el 28 de marzo de 2020 en Full Stack Python: [https://www.fullstackpython.com/blog/learn-pandas-basic-commands-explore-covid-19-data.html], el cual recomiendo para quienes sepan programar en Python, pero no estén familiarizados con la librería Pandas."
@@ -1084,18 +1093,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from pandas.plotting import andrews_curves\n",
-    "# mx2 = mx\n",
-    "# mx2 = mx2.cumsum()\n",
-    "mx3 = mx\n",
+    "mx2 = mx\n",
     "mx3.sort_values(by=['dateRep'], ascending=True)\n",
     "print(mx3.head())\n",
-    "\n",
-    "# pyplot.plot_date(x_hodnoty, y_hodnoty, 'b-', linewidth=0.5)\n",
-    "\n",
-    "plt.plot_date(mx3.dateRep, mx3.deaths, 'b-', linewidth=0.5)\n",
-    "# mx3.cases.plot()\n",
-    "# mx3.deaths.plot(secondary_y=True, style='g')\n",
-    "# mx2.plot(subplots=True, figsize=(6, 6)); plt.legend(loc='best')"
+    "plt.plot_date(mx3.dateRep, mx3.deaths, 'b-', linewidth=0.5)"
    ]
   },
   {
@@ -1241,7 +1242,6 @@
    ],
    "source": [
     "from matplotlib.dates import DayLocator, HourLocator, DateFormatter, drange\n",
-    "# import numpy as np\n",
     "\n",
     "def plot_ts(df, field):\n",
     "    dates = df[\"dateRep\"]\n",
