change format in notebook up to 2.2.2.

--- a/covid/covid19mx_notebook.ipynb
+++ b/covid/covid19mx_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Fecha de hoy: 16-04-2020\n",
+       "### Fecha de hoy: 17-04-2020\n",
        "  "
       ],
       "text/plain": [
@@ -37,7 +37,9 @@
     {
      "data": {
       "text/markdown": [
-       "_Los datos fueron actualizados el día de hoy_"
+       "_Si quieres tener la fecha más reciente,\n",
+       "    lee la documentación de este proyecto:\n",
+       "    [https://github.com/damian-romero/covid19_mx/blob/master/README.md]_"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -68,17 +70,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paso #1: Cargar los datos\n",
-    "Cargar o \"importar\" los datos en Python usando un paquete para el manejo de datos llamado \"Pandas\"."
+    "# 1. Cargar los datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1. Importar el módulo ```pandas```\n",
+    "\n",
+    "*Cargar o \"importar\" los datos en Python usando un paquete para el manejo de datos llamado \"Pandas\".*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \"Activar\" el paquete **Pandas**\n",
     "from pandas import read_csv"
    ]
   },
@@ -86,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paso #2: Abrir la tabla de datos\n",
+    "## 1.2. Abrir la tabla de datos\n",
     "Abriremos la tabla de datos usando el paquete \"Pandas\" que acabamos de importar\n",
     "* Usaremos los datos en versión \".csv\".\n",
     "- Si quieren la versión más reciente de los datos:\n",
@@ -100,12 +109,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*La siguiente es la fecha de los datos que actualicé más recientemente:*"
+    "### 1.2.1. *La siguiente es la fecha de los datos que actualicé más recientemente:*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,25 +123,27 @@
        "'16-04-2020'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datos.encabezado.fecha_actualizacion"
+    "# Extraemos la información del sub-módulo datos, del archivo encabezado\n",
+    "from datos.encabezado import fecha_actualizacion\n",
+    "fecha_actualizacion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Y el siguiente archivo es la tabla de datos correspondiente:*"
+    "### 1.2.2. *Y el siguiente archivo es la tabla de datos correspondiente:*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -141,31 +152,32 @@
        "'covid19_16-04-2020_.csv'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datos.encabezado.tabla_de_datos"
+    "from datos.encabezado import tabla_de_datos\n",
+    "tabla_de_datos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Abrimos los datos de todo el mundo y después nos enfocaremos en los datos de México.*"
+    "### 1.2.3. *Abrimos los datos de todo el mundo y después nos enfocaremos en los datos de México.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "_Tus datos del archivo covid19_16-04-2020_.csv están cargados_"
+       "_Tus datos del archivo `covid19_16-04-2020_.csv` están cargados_"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -177,29 +189,32 @@
    ],
    "source": [
     "folder_datos = 'datos/'\n",
-    "datos_mundo = read_csv(folder_datos + datos.encabezado.tabla_de_datos)\n",
+    "\n",
+    "datos_mundo = read_csv(folder_datos + tabla_de_datos)\n",
     "if not datos_mundo.empty:\n",
-    "    display(Markdown(f\"\"\"_Tus datos del archivo {datos.encabezado.tabla_de_datos} están cargados_\"\"\"))"
+    "    display(Markdown(f\"\"\"_Tus datos del archivo `{tabla_de_datos}` están cargados_\"\"\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Paso #3: Familiarizarnos con los datos\n",
-    "*Los datos vienen en una tabla con varias columnas y filas. Cada columna tiene un nombre distinto, por ejemplo hay una para los nombres de los países, otra para la población del país, etc. Y las filas representan un día de la pandemia en cada país."
+    "# 2. Familiarizarnos con los datos\n",
+    "*Los datos vienen en una tabla con varias columnas y filas. Cada columna tiene un nombre distinto, por ejemplo hay una para los nombres de los países, otra para la población del país, etc. Y las filas representan un día de la pandemia en cada país.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Antes de empezar, elige un número en la siguiente línea en donde dice ```mostrar_los_primeros = 5```. Si substituyes el número 5 por el de tu elección, la tabla te mostrará las primeras X filas de tus datos (te recomiendo no elegir más de 20 para que no sea imposible leer este documento)."
+    "## 2.1. Antes de empezar\n",
+    "\n",
+    "*Antes de empezar, elige un número en la siguiente línea en donde dice ```mostrar_los_primeros = 5```. Si substituyes el número 5 por el de tu elección y luego presionas el botón de* **`Run`** *en el menú de arriba, la tabla te mostrará las primeras X filas de tus datos (te recomiendo no elegir más de 20 para que no sea imposible leer este documento).*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. Veamos cómo se ve la tabla, para darnos una mejor idea de los datos**"
+    "### 2.1.1. Veamos cómo se ve la tabla, para darnos una mejor idea de los datos"
    ]
   },
   {
@@ -222,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +359,7 @@
        "4                  AFG   37172386.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,12 +372,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2. Veamos con atención los nombres de las columnas**"
+    "### 2.1.1. Veamos con atención los nombres de las columnas**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -371,56 +386,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columna # 1 -> dateRep\n",
-      "Columna # 2 -> day\n",
-      "Columna # 3 -> month\n",
-      "Columna # 4 -> year\n",
-      "Columna # 5 -> cases\n",
-      "Columna # 6 -> deaths\n",
-      "Columna # 7 -> countriesAndTerritories\n",
-      "Columna # 8 -> geoId\n",
-      "Columna # 9 -> countryterritoryCode\n",
-      "Columna # 10 -> popData2018\n"
+      "Columna # 1 -> dateRep -> (fecha completa)\n",
+      "Columna # 2 -> day -> (día del mes en la siguiente columna)\n",
+      "Columna # 3 -> month -> (mes)\n",
+      "Columna # 4 -> year -> (año)\n",
+      "Columna # 5 -> cases -> (número de casos)\n",
+      "Columna # 6 -> deaths -> (númer de muertes)\n",
+      "Columna # 7 -> countriesAndTerritories -> (países y territorios)\n",
+      "Columna # 8 -> geoId -> (número de identificaión del país o territorio)\n",
+      "Columna # 9 -> countryterritoryCode -> (código del país o territorio)\n",
+      "Columna # 10 -> popData2018 -> (población en 2018)\n"
      ]
     }
    ],
    "source": [
+    "explicación_esp = ['fecha completa','día del mes en la siguiente columna','mes','año','número de casos','númer de muertes','países y territorios','número de identificaión del país o territorio','código del país o territorio','población en 2018',]\n",
+    "\n",
     "for numero_columna, columna in enumerate(list(datos_mundo)): \n",
-    "    print(f\"\"\"Columna # {numero_columna + 1} -> {columna}\"\"\")"
+    "    print(f\"\"\"Columna # {numero_columna + 1} -> {columna} -> ({explicación_esp[numero_columna]})\"\"\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Esta es la explicación de los nombres de las columnas:*\n",
+    "### 2.1.3. Exploremos el número total de filas que tiene la tabla de datos.\n",
     "\n",
-    "- Columna # 1 -> fecha completa\n",
-    "- Columna # 2 -> día (del mes en la siguiente columna)\n",
-    "- Columna # 3 -> mes\n",
-    "- Columna # 4 -> año\n",
-    "- Columna # 5 -> número de casos\n",
-    "- Columna # 6 -> númer de muertes\n",
-    "- Columna # 7 -> países y territorios\n",
-    "- Columna # 8 -> número de identificaión del país o territorio\n",
-    "- Columna # 9 -> código del país o territorio\n",
-    "- Columna # 10 -> población en 2018"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.3. Exploremos el número total de filas que tiene la tabla de datos.**\n",
-    "\n",
-    "** Recordemos que esto representa la suma del número de días por cada país representado. Algunas columnas están vacías porque el ECDC no tiene ciertos datos (por ejemplo, la población de algunos países no está en la tabla), así que habrá algunas discrepancias en los números de ciertas columnas.\n",
-    "\n",
-    "El siguente código nos mostrará el número de datos de cada columna:"
+    "* *Recordemos que esto representa la suma del número de días por cada país representado. Algunas columnas están vacías porque el ECDC no tiene ciertos datos (por ejemplo, la población de algunos países no está en la tabla), así que habrá algunas discrepancias en los números de ciertas columnas.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +436,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +449,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4. Ahora veamos cuáles son los países con mayor número de personas infectadas y de muertes del día de la actualización más reciente o del día que tú elijas**"
+    "## 2.2. Explorar datos de infecciones y muertes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.1 Veamos primero los datos de la actualización más reciente"
    ]
   },
   {
@@ -473,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cambia la siguiente línea si quieres revisar otro día.\n",
     "# Puedes cambiarla a algo parecido a:\n",
     "# dia_que_nos_interesa = '01/04/2020'\n",
-    "dia_que_nos_interesa = datos.encabezado.fecha_actualizacion"
+    "dia_que_nos_interesa = fecha_actualizacion"
    ]
   },
   {
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +634,7 @@
        "274    AO                  AGO   30809762.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,6 +642,13 @@
    "source": [
     "datos_dia_elegido = datos_mundo[datos_mundo.dateRep == dia_que_nos_interesa]\n",
     "datos_dia_elegido.head(mostrar_los_primeros_n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.2. Ahora veamos cuáles son los países con mayor número de personas infectadas y de muertes del día de la actualización más reciente o del día que tú elijas"
    ]
   },
   {
